fix z-index issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1528,8 +1528,6 @@ blockquote:after,
 
     &:after { background-image: linear-gradient(to bottom, rgba(0,0,0,0.75), rgba(0,0,0,0.25)); }
 
-    & * { z-index: 5; }
-
     .site-inner.site-content { width: 100%; }
 }
 
@@ -1538,6 +1536,7 @@ blockquote:after,
     align-items: center;
     display: flex;
     flex-wrap: wrap;
+    z-index: 1;
 }
 
 .site-branding {
